--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 
   <!-- Your code here -->
-  <img src=
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="Amazon Lion">
 </body>
 </html>
